Clean up the code style and implement multiple improvements: * refactor the class components in favor of functional components with hooks * implement pagination for long solution lists * implement more keyboard shortcuts * provide solution lists for listening and naming challenges * replace deprecated rollup plugins * improve some JSDocs

--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,12 +1,22 @@
 {
   "presets": [
-    ["@babel/env", {"modules": false}]
+    [
+      "@babel/env",
+      {
+        "modules": false
+      }
+    ]
   ],
   "plugins": [
-    ["babel-plugin-macros"],
-    ["@babel/plugin-transform-react-jsx", {
+    [
+      "babel-plugin-macros"
+    ],
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
         "pragma": "h",
         "pragmaFrag": "Fragment"
-    }]
+      }
+    ]
   ]
 }
