--- a/package.json
+++ b/package.json
@@ -15,21 +15,25 @@
     "lodash": "^4.17.15",
     "lodash.product": "^18.9.19",
     "moize": "^5.4.6",
-    "preact": "^10.4.1",
+    "paginator": "^1.0.0",
+    "preact": "^10.4.4",
     "preact-i18n": "^2.0.0-preactx.2",
+    "preact-use": "github:blmage/preact-use#master",
     "xregexp": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "@rollup/plugin-replace": "^2.3.2",
     "babel-plugin-macros": "^2.8.0",
     "param.macro": "^3.2.1",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-strict-alias": "^1.0.0",
     "rollup-plugin-terser": "^5.3.0"
   }
 }
