--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.3.2",
     "babel-plugin-macros": "^2.8.0",
+    "eslint": "^7.1.0",
+    "eslint-config-preact": "^1.1.1",
+    "eslint-plugin-jsdoc": "^26.0.0",
+    "eslint-plugin-react": "^7.20.0",
     "param.macro": "^3.2.1",
     "rollup": "^2.11.2",
     "rollup-plugin-babel": "^4.4.0",
