--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: blmage/eslint-action@1.0.4
+      - uses: blmage/eslint-action@1.1.0
         with:
           files: src/
+          maxWarnings: 0
