--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aphrodite": "^2.4.0",
     "diff": "^4.0.2",
     "immutable": "^4.0.0-rc.12",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "lodash.product": "^18.9.19",
     "moize": "^5.4.6",
@@ -20,6 +21,7 @@
     "preact": "^10.4.4",
     "preact-i18n": "^2.0.0-preactx.2",
     "preact-use": "github:blmage/preact-use#master",
+    "storage-lru": "^0.1.1",
     "xregexp": "^4.3.0"
   },
   "devDependencies": {
