--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "preact": "^10.4.4",
     "preact-i18n": "^2.0.0-preactx.2",
     "preact-use": "github:blmage/preact-use#master",
-    "storage-lru": "^0.1.1",
-    "xregexp": "^4.3.0"
+    "storage-lru": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
