--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aphrodite": "^2.4.0",
+    "dexie": "^3.0.1",
     "diff": "^4.0.2",
     "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.1",
@@ -20,8 +21,7 @@
     "paginator": "^1.0.0",
     "preact": "^10.4.4",
     "preact-i18n": "^2.0.0-preactx.2",
-    "preact-use": "github:blmage/preact-use#master",
-    "storage-lru": "^0.1.1"
+    "preact-use": "github:blmage/preact-use#master"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
