Update ESLint configuration (compatibility with eslint-plugin-jsdoc 28.0.0)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,5 +25,10 @@
         "react"
     ],
     "rules": {
+    },
+    "settings": {
+        "jsdoc": {
+            "mode": "typescript"
+        }
     }
 }
