Prepare version 4.0.0 - Update dependencies - Remove dependency on lodash - Remove dependency on immutable.js - Refactor and clean up the code - Optimize performance when parsing challenges and calculating similarities - Target only recent browsers with support for Unicode regexes (fix #23) - Add ability to filter solutions on one or more words (fix #78) - Add ability to make the user answer stick to the top of the modal - Purge old challenges only when a quota error occurred - Change the solution icon - Change the loader animation - Fix detection of naming challenges (fix #137) - Detect full answers for "fill in the blank" challenges (fix #45)

--- a/package.json
+++ b/package.json
@@ -3,45 +3,52 @@
   "description": "A browser extension providing access to the complete lists of accepted solutions for Duolingo's translation challenges.",
   "license": "MIT",
   "author": "blmage",
-  "version": "3.0.7",
+  "version": "4.0.0",
   "scripts": {
     "build": "rollup -c --environment production",
     "build-debug": "rollup -c --environment development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-pro": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/pro-regular-svg-icons": "^5.15.1",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "aphrodite": "^2.4.0",
     "dexie": "^3.0.2",
     "diff": "^4.0.2",
     "fetch-retry": "^4.0.1",
-    "immutable": "^4.0.0-rc.12",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.20",
-    "lodash.product": "^18.9.19",
+    "match-sorter": "^5.0.0",
     "moize": "^5.4.7",
     "paginator": "^1.0.0",
-    "preact": "^10.5.4",
-    "preact-i18n": "^2.0.0-preactx.2",
+    "preact": "^10.5.5",
+    "preact-i18n": "^2.1.1-preactx",
     "preact-use": "github:blmage/preact-use#master",
-    "sleep-promise": "^8.0.1"
+    "react-tag-autocomplete": "github:blmage/react-tags#master",
+    "sleep-promise": "^8.0.1",
+    "use-callback-ref": "^1.2.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-react-jsx": "^7.12.5",
+    "@babel/preset-env": "^7.12.1",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.3",
+    "@rollup/plugin-replace": "^2.3.4",
     "babel-plugin-macros": "^2.8.0",
-    "eslint": "^7.10.0",
-    "eslint-config-preact": "^1.1.1",
-    "eslint-plugin-jsdoc": "^30.6.1",
-    "eslint-plugin-react": "^7.21.2",
+    "eslint": "^7.13.0",
+    "eslint-config-preact": "^1.1.3",
+    "eslint-plugin-jsdoc": "^30.7.7",
+    "eslint-plugin-react": "^7.21.5",
     "param.macro": "^3.2.1",
-    "rollup": "^2.29.0",
+    "rollup": "^2.33.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-strict-alias": "^1.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^4.2.0"
   }
 }
