--- a/src/.babelrc
+++ b/src/.babelrc
@@ -5,7 +5,10 @@
       {
         "modules": false,
         "targets": {
-          "esmodules": true
+          "chrome": "64",
+          "edge": "79",
+          "firefox": "78",
+          "opera": "51"
         }
       }
     ]
