--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -11,3 +11,5 @@ jobs:
         with:
           files: src/
           maxWarnings: 0
+        env:
+          FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
