--- a/package.json
+++ b/package.json
@@ -3,51 +3,51 @@
   "description": "A browser extension providing access to the complete lists of accepted solutions for Duolingo's translation challenges.",
   "license": "MIT",
   "author": "blmage",
-  "version": "4.5.1",
+  "version": "4.6.0",
   "scripts": {
     "build": "rollup -c --environment production",
     "build-debug": "rollup -c --environment development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-pro": "^5.15.1",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/pro-regular-svg-icons": "^5.15.2",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.2",
+    "@fortawesome/fontawesome-pro": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/pro-regular-svg-icons": "^5.15.3",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "aphrodite": "^2.4.0",
     "dexie": "^3.0.3",
     "diff": "^4.0.2",
+    "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git",
     "js-cookie": "^2.2.1",
     "match-sorter": "^5.0.0",
     "moize": "^5.4.7",
     "paginator": "^1.0.0",
-    "preact": "^10.5.12",
+    "preact": "^10.5.14",
     "preact-i18n": "^2.1.1-preactx",
-    "preact-use": "github:blmage/preact-use#master",
-    "react-tag-autocomplete": "github:blmage/react-tags#master",
-    "sleep-promise": "^8.0.1",
+    "preact-use": "git+https://github.com/blmage/preact-use.git",
+    "react-tag-autocomplete": "git+https://github.com/blmage/react-tags.git",
     "use-callback-ref": "^1.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/plugin-transform-react-jsx": "^7.12.13",
-    "@babel/preset-env": "^7.12.13",
-    "@rollup/plugin-babel": "^5.2.3",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.14.8",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^15.1.0",
-    "@rollup/plugin-node-resolve": "^9.0.0",
-    "@rollup/plugin-replace": "^2.3.4",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "babel-plugin-macros": "^2.8.0",
-    "eslint": "^7.19.0",
-    "eslint-config-preact": "^1.1.3",
+    "eslint": "^7.32.0",
+    "eslint-config-preact": "^1.1.4",
     "eslint-plugin-jsdoc": "^30.7.13",
-    "eslint-plugin-react": "^7.22.0",
-    "param.macro": "^3.2.1",
-    "rollup": "^2.38.5",
+    "eslint-plugin-react": "^7.24.0",
+    "one-liner.macro": "git+https://github.com/blmage/one-liner.macro.git",
+    "rollup": "^2.55.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-strict-alias": "^1.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^4.2.0"
+    "rollup-plugin-visualizer": "^4.2.2"
   }
 }
