Use SemVer for each dependency

--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "aphrodite": "^2.4.0",
     "dexie": "^3.0.3",
     "diff": "^4.0.2",
-    "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git",
+    "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git#semver:^2.0.2",
     "js-cookie": "^2.2.1",
     "match-sorter": "^5.0.0",
     "moize": "^5.4.7",
     "paginator": "^1.0.0",
     "preact": "^10.5.14",
     "preact-i18n": "^2.1.1-preactx",
-    "preact-use": "git+https://github.com/blmage/preact-use.git",
-    "react-tag-autocomplete": "git+https://github.com/blmage/react-tags.git",
+    "preact-use": "git+https://github.com/blmage/preact-use.git#semver:^17.4.0",
+    "react-tag-autocomplete": "git+https://github.com/blmage/react-tags.git#semver:^6.2.0",
     "use-callback-ref": "^1.2.5"
   },
   "devDependencies": {
@@ -43,7 +43,7 @@
     "eslint-config-preact": "^1.1.4",
     "eslint-plugin-jsdoc": "^30.7.13",
     "eslint-plugin-react": "^7.24.0",
-    "one-liner.macro": "git+https://github.com/blmage/one-liner.macro.git",
+    "one-liner.macro": "git+https://github.com/blmage/one-liner.macro.git#semver:^3.2.2-patch",
     "rollup": "^2.55.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-strict-alias": "^1.0.0",
