--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,5 +7,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install modules
       run: yarn
+      env:
+        FONTAWESOME_NPM_AUTH_TOKEN: ${{ secrets.FONTAWESOME_NPM_AUTH_TOKEN }}
     - name: Run ESLint
       run: eslint src
