--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-pro": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/pro-regular-svg-icons": "^5.15.3",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fortawesome/fontawesome-pro": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/pro-regular-svg-icons": "^6.4.2",
+    "@fortawesome/pro-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "aphrodite": "^2.4.0",
-    "dexie": "^3.2.2",
     "diff": "^4.0.2",
-    "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git#semver:^3.5.0",
+    "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git#semver:^3.8.0",
     "js-cookie": "^2.2.1",
     "match-sorter": "^5.0.0",
     "moize": "^5.4.7",
     "paginator": "^1.0.0",
-    "preact": "^10.5.14",
+    "preact": "^10.17.1",
     "preact-i18n": "^2.1.1-preactx",
     "preact-use": "git+https://github.com/blmage/preact-use.git#semver:^17.4.0",
     "react-tag-autocomplete": "git+https://github.com/blmage/react-tags.git#semver:^6.3.0",
-    "use-callback-ref": "^1.2.5"
+    "use-callback-ref": "^1.2.5",
+    "wanakana": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
