Implement compatibility with Manifest v2 and v3
Also fix the detection of challenges in some cases

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A browser extension providing access to the complete lists of accepted solutions for Duolingo's translation challenges.",
   "license": "MIT",
   "author": "blmage",
-  "version": "4.17.3",
+  "version": "4.18.0",
   "scripts": {
     "build": "rollup -c --environment production",
     "build-debug": "rollup -c --environment development",
@@ -19,6 +19,7 @@
     "@fortawesome/pro-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "aphrodite": "^2.4.0",
+    "dexie": "^4.0.1",
     "diff": "^4.0.2",
     "duo-toolbox": "git+https://github.com/blmage/duo-toolbox.git#semver:^3.8.0",
     "js-cookie": "^2.2.1",
@@ -47,6 +48,7 @@
     "eslint-plugin-react": "^7.33.2",
     "one-liner.macro": "git+https://github.com/blmage/one-liner.macro.git#semver:^3.3.0",
     "rollup": "^2.55.1",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-purified-css": "git+https://github.com/blmage/rollup-plugin-purified-css.git#semver:^1.1.0",
     "rollup-plugin-strict-alias": "^1.0.0",
     "rollup-plugin-terser": "^7.0.2",
